# crud-flask-api

./: README.md  pyproject.toml
src/flask_app/: __init__.py  db.py  dinamic_route.py  insert.py
