[tool.poetry]
name = "flask-app"
version = "0.1.0"
description = ""
authors = ["Ibrahimyunel <ibrahim.cbshp@gmail.com>"]
readme = "README.md"
packages = [{include = "flask_app", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3.2"
flask-mysqldb = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
